# TestRustJS

./: README.md  setup.sh
backend/: Cargo.toml  build.rs
backend/src/: main.rs  proto.rs
frontend/: package.json  pnpm-lock.yaml  svelte.config.js
frontend/src/routes/: +page.svelte
proto/: model.proto
